# TS-OS

./: .gitignore  BOGVM-0.py  CHANGELOG.md  README.md  TS-OS-Logic.py  bootloader.py  kernel.py  pyproject.toml  requirements.txt  shell.py  theme.qss  ts_api.py  ts_de.py  ts_os_runtime.py  ts_os_windows.py  ts_v1_3d_graph.json
.github/workflows/: ci.yml
core/: compiler.py  substrate.py  tensors.py
docs/: architecture.md  baseline_audit.md  milestone_report.md
examples/: add_13_10.bogasm  add_13_10.bogexe  addition_process.bogpkg
experiments/: check_3d_saddles.py  check_failed_trace.py  check_pair_0_1.py  check_raw_candidates.py  debug_pairs.py  debug_projected_failed.py  find_all_saddles.py  find_saddle_points.py  print_profile.py  run_pipeline.py  test_midpoint_ascent.py  test_raw_maxima.py
legacy/experiments/: print_profile_0_4.py  test_3d_edges.py
legacy/experiments/original_root/: TS-V1-3D.py  kernel.py  (+5 more)
output/: constraint_graph.json
specs/: bog-object-formats-v0.md  bogvm-isa-v0.md  determinism-v0.md
src/bogvm/: __init__.py  assembler.py  faults.py  formats.py  instruction.py  isa.py  machine.py  receipts.py
src/tscli/: __init__.py  main.py
src/tsfield/: __init__.py  runtime.py
src/tsos/: __init__.py  bootloader.py  drivers.py  kernel.py  persistence.py
src/tstopology/: __init__.py  compiler.py
tests/bogvm/: test_machine.py
tests/cli/: test_cli_lifecycle.py
tests/field/: test_runtime.py
tests/formats/: test_formats.py
tests/integration/: test_kernel.py
tests/topology/: test_compiler.py
utils/: graph_exporter.py  visualizer.py
