[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-os"
version = "0.1.0"
description = "Deterministic TS-OS runtime with BOGVM execution receipts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.20",
  "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10",
]
gui = [
  "matplotlib>=3.4",
  "pygame>=2.5",
  "PyQt6>=6.6",
]

[project.scripts]
ts = "tscli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
